--- a/src/editor/assets/css/contextmenu/contextmenu.css
+++ b/src/editor/assets/css/contextmenu/contextmenu.css
@@ -9,6 +9,7 @@
   box-shadow: 0 2px 12px 0 rgb(56 56 56 / 20%);
   border: 1px solid #e2e6ed;
   border-radius: 2px;
+  font-family: 'Geist Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ce-contextmenu-content {
