--- a/src/editor/assets/css/control/select.css
+++ b/src/editor/assets/css/control/select.css
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   margin: 5px 0;
   overflow-y: auto;
+  font-family: 'Geist Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ce-select-control-popup ul {
