--- a/src/editor/assets/css/date/datePicker.css
+++ b/src/editor/assets/css/date/datePicker.css
@@ -13,6 +13,7 @@
   user-select: none;
   border: 1px solid #e4e7ed;
   box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
+  font-family: 'Geist Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ce-date-container.active {
@@ -41,7 +42,7 @@
 }
 
 .ce-date-title>span:not(.ce-date-title__now) {
-  font-family: cursive;
+  font-family: 'Geist Mono Variable', 'Consolas', 'Monaco', monospace;
   cursor: pointer;
 }
 
