--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+@import '@fontsource-variable/geist';
+@import '@fontsource-variable/geist-mono';
+
 ::-webkit-scrollbar {
   height: 16px;
   width: 16px;
@@ -35,7 +38,8 @@
   padding: 0;
 }
 
-body {
+html, body {
+  font-family: 'Geist Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #F2F4F7;
 }
 
@@ -54,6 +58,7 @@ ul {
   justify-content: center;
   background: #F2F4F7;
   box-shadow: 0 2px 4px 0 transparent;
+  font-family: 'Geist Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .menu-divider {
@@ -124,7 +129,8 @@ ul {
 }
 
 .menu-item .options {
-  width: 70px;
+  width: auto;
+  min-width: 70px;
   position: absolute;
   left: 0;
   top: 25px;
@@ -135,6 +141,7 @@ ul {
   border: 1px solid #e2e6ed;
   border-radius: 2px;
   display: none;
+  white-space: nowrap;
 }
 
 .menu-item .options.visible {
@@ -230,7 +237,8 @@ ul {
 }
 
 .menu-item .menu-item__underline .options {
-  width: 128px;
+  width: auto;
+  min-width: 128px;
 }
 
 .menu-item .menu-item__underline li {
@@ -320,7 +328,8 @@ ul {
 }
 
 .menu-item__title .options {
-  width: 80px;
+  width: auto;
+  min-width: 80px;
 }
 
 .menu-item__left i {
@@ -360,7 +369,8 @@ ul {
 }
 
 .menu-item__list .options {
-  width: 110px;
+  width: auto;
+  min-width: 110px;
 }
 
 .menu-item__list .options>ul>li * {
@@ -481,7 +491,8 @@ ul {
 }
 
 .menu-item .menu-item__separator .options {
-  width: 128px;
+  width: auto;
+  min-width: 128px;
 }
 
 .menu-item .menu-item__separator li {
@@ -561,7 +572,8 @@ ul {
 }
 
 .menu-item__date .options {
-  width: 160px;
+  width: auto;
+  min-width: 160px;
 }
 
 .menu-item__block i {
@@ -569,7 +581,8 @@ ul {
 }
 
 .menu-item .menu-item__control .options {
-  width: 55px;
+  width: auto;
+  min-width: 55px;
 }
 
 .menu-item__search {
@@ -720,6 +733,18 @@ ul {
 
 .menu-item__print i {
   background-image: url('./assets/images/print.svg');
+}
+
+.menu-item__import-docx i {
+  background-image: url('./assets/images/import-docx.svg');
+}
+
+.menu-item__import-docx input {
+  display: none;
+}
+
+.menu-item__export-docx i {
+  background-image: url('./assets/images/export-docx.svg');
 }
 
 .catalog {
@@ -942,7 +967,8 @@ ul {
 }
 
 .footer .options {
-  width: 70px;
+  width: auto;
+  min-width: 70px;
   position: absolute;
   left: 0;
   bottom: 25px;
@@ -953,6 +979,7 @@ ul {
   border: 1px solid #e2e6ed;
   border-radius: 2px;
   display: none;
+  white-space: nowrap;
 }
 
 .footer .options.visible {
