--- a/src/style.css
+++ b/src/style.css
@@ -178,6 +178,9 @@ ul {
 .menu-item__size .select {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .menu-item__undo.no-allow,
@@ -320,6 +323,9 @@ ul {
 .menu-item__title .select {
   width: calc(100% - 20px);
   height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .menu-item__title i {
