--- a/src/editor/assets/css/hyperlink/hyperlink.css
+++ b/src/editor/assets/css/hyperlink/hyperlink.css
@@ -1,7 +1,7 @@
 .ce-hyperlink-popup {
   background: #fff;
   box-shadow: 0 2px 12px 0 rgb(98 107 132 / 20%);
-  border-radius: 2px;
+  border-radius: 8px;
   color: #3d4757;
   padding: 12px 16px;
   position: absolute;
@@ -22,5 +22,5 @@
   text-decoration: none;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  color: #0000ff;
+  color: #1a73e8;
 }
