--- a/src/style.css
+++ b/src/style.css
@@ -930,7 +930,8 @@ ul {
   align-items: center;
   justify-content: space-between;
   background: #f2f4f7;
-  z-index: 9;
+  z-index: 9999;
+  pointer-events: auto;
   position: fixed;
   bottom: 0;
   left: 0;
